--- a/hello.html
+++ b/hello.html
@@ -1,7 +1,9 @@
 <!DOCTYPE html>
 <html>
-<head>
-<title> My web page </title>
-<body>
-Hello World
-</body
+    <head>
+        <title> My web page </title>
+    </head>
+    <body>
+        Hello World
+    </body>
+</html>
